// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"stylelint.validate" setting when set to ["scss"] should lint and auto-fix scss 1`] = `
[
  {
    "code": "function-name-case",
    "codeDescription": {
      "href": "https://stylelint.io/user-guide/rules/function-name-case",
    },
    "message": "Expected "RGB" to be "rgb" (function-name-case)",
    "range": {
      "end": {
        "character": 12,
        "line": 2,
      },
      "start": {
        "character": 9,
        "line": 2,
      },
    },
    "severity": 1,
    "source": "Stylelint",
  },
]
`;

exports[`"stylelint.validate" setting when set to ["scss"] should lint and auto-fix scss 2`] = `
"/* prettier-ignore */
a {
  color: rgb(0 0 0);
}
"
`;

exports[`"stylelint.validate" setting when set to ["scss"] shouldn't lint or fix css 1`] = `
"/* prettier-ignore */
a {
  color: RGB(0 0 0);
}
"
`;

exports[`"stylelint.validate" setting when set to ["scss"] shouldn't lint or fix markdown 1`] = `
"# title

\`\`\`css
a {
  color: RGB(0 0 0);
}
\`\`\`
"
`;
